--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "better-sqlite3": "^9.4.3",
-    "marked": "^12.0.0",
-    "puppeteer": "^22.0.0"
+    "marked": "^12.0.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
