--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # ============================================
 # M004: NeurA Research - Docker Compose Production
-# Version: 1.0.0
+# Version: 2.0.0
 # ============================================
 
 services:
@@ -14,21 +14,41 @@ services:
     environment:
       - NODE_ENV=production
       - MODULE_ID=m004
-      - MODULE_VERSION=${MODULE_VERSION:-1.0.0}
+      - MODULE_VERSION=${MODULE_VERSION:-2.0.0}
       - MODULE_NAME=${MODULE_NAME:-NeurA Research}
       - PORT=3004
       - CORE_API_URL=${CORE_API_URL:-http://neura-core:8000}
       - CORE_API_KEY=${CORE_API_KEY}
       - INTERNAL_API_KEY=${INTERNAL_API_KEY}
+      # AI Providers
       - PERPLEXITY_API_KEY=${PERPLEXITY_API_KEY}
       - PERPLEXITY_MODEL=${PERPLEXITY_MODEL:-sonar-pro}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - CLAUDE_MODEL=${CLAUDE_MODEL:-claude-sonnet-4-20250514}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_MODEL_TRIAGE=${OPENAI_MODEL_TRIAGE:-gpt-4.1-nano}
+      - OPENAI_MODEL_CLAIM_DECOMPOSITION=${OPENAI_MODEL_CLAIM_DECOMPOSITION:-gpt-4.1-mini}
+      - OPENAI_MODEL_DEEP_CHECK=${OPENAI_MODEL_DEEP_CHECK:-gpt-4.1-nano}
+      # Storage
       - DATA_PATH=/app/data
       - RETENTION_DAYS=${RETENTION_DAYS:-7}
+      # Quality
       - DEFAULT_CONFIDENCE_THRESHOLD=${DEFAULT_CONFIDENCE_THRESHOLD:-0.80}
       - MAX_QUESTIONS_SIMPLE=${MAX_QUESTIONS_SIMPLE:-3}
-      - MAX_QUESTIONS_STANDARD=${MAX_QUESTIONS_STANDARD:-10}
+      - MAX_QUESTIONS_STANDARD=${MAX_QUESTIONS_STANDARD:-5}
+      - MAX_QUESTIONS_DEEP=${MAX_QUESTIONS_DEEP:-10}
+      # Budget
+      - BUDGET_SIMPLE_MAX_COST_USD=${BUDGET_SIMPLE_MAX_COST_USD:-0.30}
+      - BUDGET_SIMPLE_MAX_TOKENS=${BUDGET_SIMPLE_MAX_TOKENS:-50000}
+      - BUDGET_STANDARD_MAX_COST_USD=${BUDGET_STANDARD_MAX_COST_USD:-1.00}
+      - BUDGET_STANDARD_MAX_TOKENS=${BUDGET_STANDARD_MAX_TOKENS:-200000}
+      - BUDGET_DEEP_MAX_COST_USD=${BUDGET_DEEP_MAX_COST_USD:-5.00}
+      - BUDGET_DEEP_MAX_TOKENS=${BUDGET_DEEP_MAX_TOKENS:-500000}
+      # Circuit Breaker
+      - CIRCUIT_BREAKER_WARNING=${CIRCUIT_BREAKER_WARNING:-70}
+      - CIRCUIT_BREAKER_CRITICAL=${CIRCUIT_BREAKER_CRITICAL:-85}
+      - CIRCUIT_BREAKER_STOP=${CIRCUIT_BREAKER_STOP:-93}
+      # Logging
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - LOG_FORMAT=${LOG_FORMAT:-json}
     volumes:
