--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,19 +63,11 @@ services:
         max-size: "10m"
         max-file: "3"
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:3004/health",
-        ]
+      test: ["CMD", "curl", "-sf", "http://localhost:3004/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
 
 networks:
   neura-network:
