--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,7 +15,7 @@ RUN npm install
 COPY . .
 
 # Create directories
-RUN mkdir -p /app/data /app/logs
+RUN mkdir -p /app/data /app/data/stats /app/logs
 
 # Expose port
 EXPOSE 3004
