--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,23 @@ jobs:
           PORT: ${{ secrets.SSH_PORT }}
           USER: ${{ secrets.SSH_USER }}
         run: |
-          SSH_CMD="ssh $SSH_OPTS -p $PORT $USER@$HOST"
+          # SSH с retry — сервер может быть под нагрузкой и сбрасывать соединения
+          ssh_retry() {
+            local max_attempts=5
+            local delay=20
+            for attempt in $(seq 1 $max_attempts); do
+              echo "  SSH attempt $attempt/$max_attempts..."
+              if ssh $SSH_OPTS -p $PORT $USER@$HOST "$@"; then
+                return 0
+              fi
+              echo "  SSH failed (attempt $attempt), waiting ${delay}s..."
+              sleep $delay
+            done
+            echo "❌ SSH failed after $max_attempts attempts"
+            return 1
+          }
 
-          # Проверяем наличие git-репозитория, при отсутствии — клонируем
-          $SSH_CMD bash -c '
+          ssh_retry bash -c '
             if [ ! -d /opt/neura/m004/.git ]; then
               echo "⚠️ Git repo not found, cloning..."
               git clone https://github.com/NeurAservice/neura-m004-research.git /opt/neura/m004
@@ -70,20 +83,26 @@ jobs:
           PORT: ${{ secrets.SSH_PORT }}
           USER: ${{ secrets.SSH_USER }}
         run: |
-          SSH_CMD="ssh $SSH_OPTS -p $PORT $USER@$HOST"
+          ssh_retry() {
+            local max_attempts=5
+            local delay=20
+            for attempt in $(seq 1 $max_attempts); do
+              if ssh $SSH_OPTS -p $PORT $USER@$HOST "$@"; then
+                return 0
+              fi
+              echo "  SSH retry $attempt/$max_attempts, waiting ${delay}s..."
+              sleep $delay
+            done
+            return 1
+          }
 
-          # Запускаем сборку в фоне через nohup с retry логикой
-          $SSH_CMD bash -c '
+          ssh_retry bash -c '
             cd /opt/neura/m004
-
-            # КРИТИЧНО: Удаляем файлы от предыдущих запусков, чтобы избежать race condition
             rm -f /tmp/m004-build-exit-code /tmp/m004-build.log
 
             nohup bash -c "
-              # Cleanup old containers first
               docker compose down 2>&1 || true
 
-              # Build with Docker layer cache (значительно быстрее чем --no-cache)
               BUILD_SUCCESS=0
               for attempt in 1 2 3; do
                 echo \"Build attempt \$attempt/3...\"
@@ -103,14 +122,10 @@ jobs:
                 exit 1
               fi
 
-              # Start container
               docker compose up -d 2>&1
               UP_EXIT=\$?
-
-              # Даём контейнеру 5 секунд на запуск
               sleep 5
 
-              # Проверяем что контейнер реально запустился (не полагаемся на exit code compose)
               if docker ps --filter name=neura-m004-research --format \"{{.Names}}\" | grep -q neura-m004-research; then
                 echo \"Container is running\"
                 echo 0 > /tmp/m004-build-exit-code
@@ -125,15 +140,19 @@ jobs:
 
           echo "⏳ Build started, waiting for completion..."
 
-          # Ожидание до 15 минут (3 попытки сборки + компиляция better-sqlite3)
           for i in $(seq 1 90); do
             sleep 10
-            RESULT=$($SSH_CMD "cat /tmp/m004-build-exit-code 2>/dev/null || echo RUNNING")
+            # Polling — одиночные сбои SSH не фатальны
+            RESULT=$(ssh $SSH_OPTS -p $PORT $USER@$HOST "cat /tmp/m004-build-exit-code 2>/dev/null || echo RUNNING" 2>/dev/null || echo "SSH_FAIL")
+            if [ "$RESULT" = "SSH_FAIL" ]; then
+              echo "  ...SSH poll failed (${i}0s elapsed), retrying..."
+              continue
+            fi
             if [ "$RESULT" != "RUNNING" ]; then
               echo "Build finished with exit code: $RESULT"
               if [ "$RESULT" != "0" ]; then
                 echo "❌ Build failed! Last 100 lines of build log:"
-                $SSH_CMD "tail -100 /tmp/m004-build.log"
+                ssh_retry "tail -100 /tmp/m004-build.log" || true
                 exit 1
               fi
               break
@@ -141,11 +160,10 @@ jobs:
             echo "  ...still building (${i}0s elapsed)"
           done
 
-          # Проверяем, не превышен ли таймаут
-          FINAL=$($SSH_CMD "cat /tmp/m004-build-exit-code 2>/dev/null || echo RUNNING")
-          if [ "$FINAL" = "RUNNING" ]; then
-            echo "❌ Build timed out after 15 minutes!"
-            $SSH_CMD "tail -100 /tmp/m004-build.log"
+          FINAL=$(ssh_retry "cat /tmp/m004-build-exit-code 2>/dev/null || echo RUNNING" || echo "SSH_FAIL")
+          if [ "$FINAL" = "RUNNING" ] || [ "$FINAL" = "SSH_FAIL" ]; then
+            echo "❌ Build timed out or SSH unavailable after 15 minutes!"
+            ssh_retry "tail -100 /tmp/m004-build.log" || true
             exit 1
           fi
 
@@ -155,27 +173,34 @@ jobs:
           PORT: ${{ secrets.SSH_PORT }}
           USER: ${{ secrets.SSH_USER }}
         run: |
-          SSH_CMD="ssh $SSH_OPTS -p $PORT $USER@$HOST"
+          ssh_retry() {
+            local max_attempts=3
+            local delay=15
+            for attempt in $(seq 1 $max_attempts); do
+              if ssh $SSH_OPTS -p $PORT $USER@$HOST "$@" 2>/dev/null; then
+                return 0
+              fi
+              sleep $delay
+            done
+            return 1
+          }
 
           echo "⏳ Waiting for container to become healthy..."
-
-          # Сначала проверим что контейнер запустился
           sleep 5
-          CONTAINER_STATUS=$($SSH_CMD "docker ps --filter name=neura-m004-research --format '{{.Status}}'" || true)
+
+          CONTAINER_STATUS=$(ssh_retry "docker ps --filter name=neura-m004-research --format '{{.Status}}'" || true)
           echo "Container status: $CONTAINER_STATUS"
 
           if [ -z "$CONTAINER_STATUS" ]; then
-            echo "❌ Container not found! Checking docker ps -a..."
-            $SSH_CMD "docker ps -a --filter name=m004"
-            echo "--- Last 50 lines of build log ---"
-            $SSH_CMD "tail -50 /tmp/m004-build.log" || true
+            echo "❌ Container not found!"
+            ssh_retry "docker ps -a --filter name=m004" || true
+            ssh_retry "tail -50 /tmp/m004-build.log" || true
             exit 1
           fi
 
-          # Retry health check до 120 секунд (контейнеру нужно время на start_period)
           for i in $(seq 1 24); do
             sleep 5
-            HEALTH=$($SSH_CMD "curl -sf --max-time 5 http://localhost:3004/health 2>&1" || true)
+            HEALTH=$(ssh $SSH_OPTS -p $PORT $USER@$HOST "curl -sf --max-time 5 http://localhost:3004/health 2>&1" 2>/dev/null || true)
             if echo "$HEALTH" | grep -q '"status"'; then
               echo "✅ Health check passed: $HEALTH"
               exit 0
@@ -184,10 +209,8 @@ jobs:
           done
 
           echo "❌ Health check failed after 120 seconds!"
-          echo "--- Container logs ---"
-          $SSH_CMD "docker logs neura-m004-research --tail 50" || true
-          echo "--- Container status ---"
-          $SSH_CMD "docker ps -a --filter name=m004"
+          ssh_retry "docker logs neura-m004-research --tail 50" || true
+          ssh_retry "docker ps -a --filter name=m004" || true
           exit 1
 
       - name: Cleanup
@@ -197,5 +220,4 @@ jobs:
           PORT: ${{ secrets.SSH_PORT }}
           USER: ${{ secrets.SSH_USER }}
         run: |
-          SSH_CMD="ssh $SSH_OPTS -p $PORT $USER@$HOST"
-          $SSH_CMD "rm -f /tmp/m004-build.log /tmp/m004-build-exit-code" 2>/dev/null || true
+          ssh $SSH_OPTS -p $PORT $USER@$HOST "rm -f /tmp/m004-build.log /tmp/m004-build-exit-code" 2>/dev/null || true
